Bug 499978 - Two more cases where The "Fall Apart" desktop effect is triggered too frequently, for windows the user doesn't consider windows
Summary: Two more cases where The "Fall Apart" desktop effect is triggered too frequen...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 6.3.0
Platform: Debian unstable Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-13 12:05 UTC by John
Modified: 2025-02-19 23:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John 2025-02-13 12:05:55 UTC
SUMMARY
Two more cases where The "Fall Apart" desktop effect is triggered too frequently, for windows the user doesn't consider windows

STEPS TO REPRODUCE
Case 1:
1. [Optional, but easier for testing] Switch Lock screen automatically to 1 minute.
2. Wait until the screen locks automatically.
3. Now wait a bit until the hour and date appears (this is mandatory to see the problem).
4. Move the mouse (before that 5 seconds delay runs over).
Case 2:
1. Lock the screen by pressing the Super + L keys.
2. Type your password and press Enter or click that button (this doesn't matter how) to unlock it.

OBSERVED RESULT
In both case 1 & 2, the effect is triggered.

EXPECTED RESULT
Similar to the cases of login and window snapping preview, that I confirm that they were indeed fixed like the bug report says:
https://bugs.kde.org/show_bug.cgi?id=498848
The effect should not be triggered also in these two cases.
Outside from the cases where a real / normal window is closed by its button / shortcut or it has crashed or it has been killed and who knows maybe for for existing a full screen thing too like a game, I don't expect that this effect is triggered.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:
KDE Plasma Version: 6.3.0
KDE Frameworks Version: 6.10.0
Qt Version: 6.7.2
Kernel Version: 6.12.13-amd64 (64-bit)
Graphics Platform: Wayland


HARDWARE SPECIFICATIONS
Hardware: Laptop Dell Inspiron 5770 (17" 1080p@60Hz screen)
CPU: Intel® Core™ i5-8250U CPU @ 1.60GHz
GPU 1: Mesa Intel® UHD Graphics 620 (main)
GPU 2: AMD Radeon R5 M465 Series
RAM: 8 GiB (7.7 GiB usable)
Comment 1 Bug Janitor Service 2025-02-17 10:51:45 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7169
Comment 2 Vlad Zahorodnii 2025-02-17 11:15:00 UTC
Git commit b459b00c2b7120633b184bf0fb446cc3cbe8b8db by Vlad Zahorodnii.
Committed on 17/02/2025 at 11:01.
Pushed by vladz into branch 'master'.

plugins/fallapart: Exclude lockscreen

M  +3    -0    src/plugins/fallapart/fallapart.cpp

https://invent.kde.org/plasma/kwin/-/commit/b459b00c2b7120633b184bf0fb446cc3cbe8b8db
Comment 3 Vlad Zahorodnii 2025-02-17 11:37:42 UTC
Git commit 88fd5125876e0c079360d5cf2076849ee8f1508b by Vlad Zahorodnii.
Committed on 17/02/2025 at 11:22.
Pushed by vladz into branch 'Plasma/6.3'.

plugins/fallapart: Exclude lockscreen


(cherry picked from commit b459b00c2b7120633b184bf0fb446cc3cbe8b8db)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>

M  +3    -0    src/plugins/fallapart/fallapart.cpp

https://invent.kde.org/plasma/kwin/-/commit/88fd5125876e0c079360d5cf2076849ee8f1508b