plugins/fallapart: Exclude lockscreen

BUG: 499978


(cherry picked from commit b459b00c2b7120633b184bf0fb446cc3cbe8b8db)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>